# MMDSBM-pytorch

./: .gitignore  INFERENCE_USAGE.md  README.md  main.py  main_old.py  pyproject.toml  t_distribution_tensor.npy  test.ipynb  test.npy
bridge/: core_dsbm.py  nbridges.py  trainer_dsbm.py
bridge/models/: loss.py  metric.py  networks.py
bridge/runners/: ema.py  inference_runner.py  train_runner.py
bridge/sde/: bridge_sampler.py
conf/: conf.py  conf_loader.py  config.yaml  config_dataset_example.yaml
conf/conf_classes/: 04_gaussian_03_varcor.py  biotine.py  bortoli_test.py  conf_example.py  conf_gaussian_3.py  conf_gaussian_dim_100.py  conf_gaussian_dim_2.py  conf_gaussian_test.py  debug.py  debug_2.py  debug_copy.py  debug_copy_ind.py  debug_gaussian2.py  debug_gaussian5.py  debug_warmup.py  debug_warmup_test.py  gaussian_test.py  gaussian_test_4gauss.py  mnist.py  phate_config.py  phate_config_2.py  phate_dim100.py  phate_dim100_multi_sigma.py  phate_dim100_old.py  phate_dim100_old_01.py  phate_dim100_s10.py  phate_dim100_s11.py  phate_dim100_s12.py  phate_dim100_s13.py  phate_dim100_s4.py  phate_dim100_s5.py  phate_dim100_s7.py  phate_dim100_s8.py  phate_dim2.py  phate_dim2_old.py  phate_dim2_s1.py  phate_dim5.py  (+5 more)
datasets/: datasets.py  datasets_registry.py
methods/: run_dsbm-n.py  run_dsbm.py
notebooks/: EmbryoidBody_TrajectoryInference.ipynb  visualisation_phate.ipynb
script/: script_sigma_phate.sh
trainer/: n_trainer.py
utils/: dataset.py  kernels.py  logger.py  metric.py  metrics.py  miscellaneous.py  tracking_logger.py  visualization.py
(+29 files in other folders)
