[project]
name = "schron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]
