[project]
name = "schron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "geomloss>=0.2.6",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pandoc>=2.4",
    "phate>=1.0.11",
    "pillow>=11.2.1",
    "pot>=0.9.5",
    "python-magic>=0.4.27",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]
